# counter

./: .dockerignore  .gitatributes  .gitignore  Dockerfile  IN_DEPTH_SUMMARY.md  README.md  bytetrack_strict.yaml  conf.example.yaml  config.example.yaml  config.server.yaml  counter.rar  docker-compose.yml  eval_model.py  flow_chart.md  object_model.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: eval.yaml  models.default.yaml  models.yaml  predict.yaml
docs/02_koncept/: 01_cil_reseni.md  02_popis_projektu.md  03_vstupy_a_vystupy.md  04_hlavni_casti_systemu.md  05_omezeni_a_predpoklady.md
docs/03_navody/: 02_cli_predikce_a_evaluace.md  02_evaluace.md
docs/04_architektura/: index.md
eval/: README.md
scripts/: choose_line.py  convert_yolo_to_coco.py  eval_models.py  fix_counts_from_raw.py  generate_eval_matplotlib.py  generate_eval_visuals.py  how_to_use.md  legacy_to_counts_json.py  run_predictions.py  train_rfdetr.py  train_yolo.py  visualize_coco_samples.py
src/: fine-tune.ipynb  main.py
src/core/: Counter.py  DetectedObject.py  LineCounter.py  ObjectTracker.py
src/counter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/eval/: __init__.py  __main__.py  cli.py  config.py  counts.py  det_eval_utils.py  evaluator.py  metrics.py  plots.py  rfdetr_eval.py  utils.py  yolo_eval.py
src/eval_model/: __init__.py  __main__.py  cli.py  coco_eval.py  config.py  evaluator.py  visuals.py
src/models/: rfdetr.py
src/predict/: __init__.py  __main__.py  base_runner.py  cli.py  config.py  rfdetr_runner.py  runner.py
src/train/: __init__.py  __main__.py  cli.py  config.py  runner.py
tests/: test_geometry.py  test_mapping.py  test_net_state.py  test_net_state_legacy_behavior.py
(+112 files in other folders)
